fixed alignment of the about mobile

--- a/css/index.css
+++ b/css/index.css
@@ -643,7 +643,7 @@ header nav a:hover {
 }
 .about-landing .about-title p {
   width: 45%;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 300;
   letter-spacing: 2px;
   line-height: 1.5;
@@ -652,8 +652,7 @@ header nav a:hover {
   .about-landing .about-title p {
     font-size: 1rem;
     width: 80%;
-    position: relative;
-    right: 10px;
+    text-align: center;
   }
 }
 .about-landing .button-text {
