--- a/less/about.less
+++ b/less/about.less
@@ -46,7 +46,7 @@
 
         p {
             width: 45%;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             font-weight: 300;
             letter-spacing: 2px;
             line-height: 1.5;
@@ -54,8 +54,7 @@
             @media @phone {
                 font-size: 1rem;
                 width: 80%;
-                position: relative;
-                right: 10px;
+                text-align: center;
             }
         }
     }
